--- a/index.html
+++ b/index.html
@@ -35,26 +35,29 @@
         <div class="container-1">
             
             <h2> Some Random Information</h2>
-            <div class="box-container">
-                <div class="box">
+            <div class="box-outer-container">
+                <div class="box-container">
+                    <div class="box">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="box-container">
-                <div class="box">
+                <div class="box-container">
+                    <div class="box">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="box-container">
-                <div class="box">
+                <div class="box-container">
+                    <div class="box">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
-                <p>this is some subtext under an illustration or image</p>
-            </div>
-            <div class="box-container">
-                <div class="box">
+                <div class="box-container">
+                    <div class="box">
+                    </div>
+                    <p>this is some subtext under an illustration or image</p>
                 </div>
-                <p>this is some subtext under an illustration or image</p>
             </div>
+            
 
         </div>
         <div class="container-2">
